@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

package "UI" {
class PerformanceUI{
}
}

package "Core" {
package "Controllers"{
class PerformanceController{
  +getAllClients()
  +getAllTestsWaitResult(beginningDate, endDate)
  +getAllTestsWaitDiagnosis(beginningDate, endDate)
  +getAllTestsValidated(beginningDate, endDate)
}
}

package "Stores"{
class ClientStore{
  +getClientListNumber()
}

class TestStore{
  +getCollectedTestsNumber(beginningDate, endDate)
  +getAnalysedTestsNumber(beginningDate, endDate)
  +getValidatedTestsNumber(beginningDate, endDate)
}
}

package "Model"{
class Company{
  -String designation
  +getClientStore()
  +getTestStore()
}

class BruteForceAlgorithm{
  +Max(seq)
}

class Sum{
  +Max(seq)
}
}


}
PerformanceUI ..> PerformanceController
PerformanceController ..> Company
PerformanceController ..> ClientStore
PerformanceController ..> TestStore
PerformanceController ..> BruteForceAlgorithm
PerformanceController ..> Sum

@enduml